Added %T,%G,%P flags for percent interpolation (useful for dtach).
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@207 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ Gautam Iyer <gi1242@users.sourceforge.net>
 	2. Disabled Shift+Enter shortcut by default, since it may confuse new
 	   users.
 	3. Make Alt+Enter behave like Xterm.
+	4. Added %T,%G,%P flags for percent interpolation (useful for dtach).
 
     * Enhancements:
 	1. Added --titleFormat and --winTitleFormat options to control display
