Added options --veryBright and --boldColors to control how bold primary colors are rendered.
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@215 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,8 @@ Gautam Iyer <gi1242@users.sourceforge.net>
     * Enhancements:
 	1. Added --titleFormat and --winTitleFormat options to control display
 	   of tab and window titles.
+	2. Added options --veryBright and --boldColors to control how bold
+	   primary colors are rendered.
 
 Jimmy Zhou <jimmyzhou@users.sourceforge.net>
     * Enhancements:
