Fixed segfault with -help, and typo in man page
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@217 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/doc/mrxvt.1
+++ b/doc/mrxvt.1
@@ -563,7 +563,7 @@ Freetype font size in pixel. The
 option must be enabled
 .Op Cm xftSize
 .
-.It Fl xftBwd Ar style
+.It Fl xftbwt Ar style
 Freetype bold font weight:
 .Ar light | medium | demibold | bold | black .
 The
