1. Added --useFifo option, to make mrxvt listen for macros on a fifo. Code based on patch by Jozef Vesely. 2. Added Raise macro to "raise" the mrxvt window. Thanks to Jozef Vesely for the patch.
Using the two options above, one can put a button on your desktop that creates a new tab, and raises an mrxvt window.



git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@218 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,10 @@ Gautam Iyer <gi1242@users.sourceforge.net>
 	   of tab and window titles.
 	2. Added options --veryBright and --boldColors to control how bold
 	   primary colors are rendered.
+	3. Added --useFifo option, to make mrxvt listen for macros on a fifo.
+	   Code based on patch by Jozef Vesely.
+	4. Added Raise macro to "raise" the mrxvt window. Thanks to Jozef
+	   Vesely for the patch.
 
 Jimmy Zhou <jimmyzhou@users.sourceforge.net>
     * Enhancements:
