Added patch by Marc Schoechlin <ms-mrxvt@256bit.org> allowing the paste of clipboard / second selection into mrxvt.
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@262 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/doc/mrxvt.1
+++ b/doc/mrxvt.1
@@ -1690,8 +1690,10 @@ pages instead of lines.
 .It Ic Copy
 Copy selection into clipboard (not implemented).
 .\" ------------------------------------------------------------
-.It Ic Paste
-Pasete selection into active tab.
+.It Ic Paste Op Ar selection-buffer
+Paste selection into active tab. The value
+.Ar selection-buffer 
+specifies the name of the buffer to be pasted. If not specified the first used buffer in the order PRIMARY, SECONDARY and CLIPBOARD  will be used.
 .It Ic ToggleSubwin Op Oo Ar + Ns | Ns Ar - Oc Ns Op Ar b Ns | Ns Ar m Ns | Ns Ar s Ns | Ns Ar t
 Toggle visibility of sub-windows. If the argument begins with a
 .Sq +
