Changed default macros:     1. Removed Ctrl+Shift+x (Paste SECONDARY), since it was previously defined as save config.     2. Changed mrxvt console from Ctrl+Shift+c to Ctrl+Shift+z     3. Bound Ctrl+shift+c to paste the clipboard. Most other keys look like they are used already. If you find a reasonable one that is unused, we can bind it to Paste SECONDARY by default. Otherwise, you can just bind that in ~/.mrxvtrc
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@265 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/doc/mrxvt.1
+++ b/doc/mrxvt.1
@@ -1432,7 +1432,7 @@ Hide/show tabbar buttons
 .
 .It Ctrl+Shift+b
 Toggle very bold font
-.It Ctrl+Shift+c
+.It Ctrl+Shift+z
 Open a
 .Nm
 console in a new tab, and enable the
@@ -1455,6 +1455,8 @@ Set title of active tab to selection.
 Paste X selection into active tab.
 .It Ctrl+Shift+v
 Paste X selection into active tab.
+.It Ctrl+Shift+c
+Paste clipboard into active tab.
 .
 .It Shift+Up
 Scroll up one line (Primary screen only)
