--- a/TODO
+++ b/TODO
@@ -61,7 +61,7 @@ Code Cleanup:
 				      BUGS
 
 9   vt100 printer support is now broken. Fix it.
-8   Looks like rvxt_scr_refresh is called twice every time. (The second refresh
+8   Looks like rxvt_scr_refresh is called twice every time. (The second refresh
     is cheap, as the screen is current). But eliminating this will save a few
     CPU cycles... NOTE: Only happens with -tr
 8   When sending escape sequences to mrxvt via macros, make sure we are not
