- added escape and percent interpolation for the 'MonitorCommand'   configuration option - mapped the "MonitorTab AUTO" macro to the currently unused "Ctrl+Shift+g"   combination - minor ident fixes in src/command.c
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@304 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/doc/mrxvt.1
+++ b/doc/mrxvt.1
@@ -1209,7 +1209,7 @@ needed. The detection of "ACTIVITY" does not make use of the configuration value
 Specifies a command which will be executed if a activity or inactivity event is raised
 by the
 .Ic MonitorTab
-macro.
+macro. (This string is escape and percent interpolated)
 .
 .It Cm veryBright Ar True Ns | Ns Ar False
 If true, and if
