Corrected ambiguity in documentation
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@399 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/doc/mrxvt.1
+++ b/doc/mrxvt.1
@@ -997,9 +997,12 @@ are: fatal, error, warn, info, verbose, and debug. The latter, the more
 information is printed
 .
 .It Fl cf Ar filename
-X resource configuration file
+The
+.Nm
+configuration file. (Default is
+.Ar ~/mrxvtrc ) .
 .It Fl cfs Ar filename
-X resource configuration file to save the current configuration
+Filename to file to save the current configuration
 .Op Cm confFileSave
 .
 .It Fl path Ar path
